--- a/colors-hda.qmd
+++ b/colors-hda.qmd
@@ -2,16 +2,40 @@
 title: "HDA Colors"
 ---
 
+## Primary palette
+
+HDAdvisors uses a four-color palette.
+
 ```{r}
 
 library(scales)
 library(chroma)
 
-pal <- c("#445ca9",
-         "#8baeaa",
-         "#e9ab3f",
-         "#e76f52")
+pal <- c(
+  "#445ca9", # Blue
+  "#8baeaa", # Green
+  "#e9ab3f", # Yellow
+  "#e76f52"  # Coral
+  )
 
-scales::show_col(pal, borders = "#ffffff", ncol = 4)
+scales::show_col(pal, borders = "#ffffff")
 
 ```
+
+::: {.callout-note}
+
+We've asked our marketing consultant to provide two additional colors for this palette. This would allow for categorical color schemes for data with more than four variables.
+
+:::
+
+## Categorical
+
+...
+
+## Sequential
+
+...
+
+## Diverging
+
+...
